# interflop

./: .gitmodules  02_consortium.markdown  03_publications.markdown  2021-01-29-meeting.markdown  2021-01-29-meeting.md  2021-03-12-meeting.markdown  2021-03-12-meeting.md  CNAME  Makefile.am  README.md  _config.yml  configure.ac  consortium.md  index.md  meeting06102021.md  meeting08062023.md  meeting12032021.md  meeting20102022.md  meeting29012021.md  meeting31032022.md  publications.md
_site/: 2021-01-29-meeting.html  2021-03-12-meeting.html  consortium.html  feed.xml  home.html  index.html  index.md  meeting12032021.html  meeting29012021.html  publications.html
_site/consortium/: index.html
_site/home/: index.html
_site/index/: index.html
_site/meeting12032021/: index.html
_site/meeting29012021/: index.html
_site/publications/: index.html
backends/: Makefile.am  README.md
backends/bitmask/: Makefile.am  bitmasklib.c  interflop-bitmask.c
backends/ieee/: interflopieee.c
backends/mca-mpfr/: Makefile.am  interflopmca-mpfr.c
files/: InterFLOP_YALES2_Lartigue.pdf:Zone.Identifier
include/: interflop.h
include/interflop/: async.hxx  backend.hxx
tests/: Makefile.am  interflop_async.cxx
